--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/config": "^1.96.0",
+    "@tamagui/core": "^1.96.0",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -31,7 +33,8 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tamagui": "^1.96.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
