--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "^15.0.4",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
