--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@gluestack-style/react": "^1.0.56",
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.25",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.17",
+    "expo": "50",
     "expo-font": "~11.10.3",
     "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "^15.0.4",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
@@ -33,9 +33,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
   },
@@ -45,7 +45,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
