--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-FIREBASE_APIKEY=AIzaSyBOZDeiQZPc8ILElX4yBbBJ4W2qYeQNGds
-FIREBASE_AUTH_DOMAIN=bark-buddy-24054.firebaseapp.com
-FIREBASE_PROJECT_ID=bark-buddy-24054
-FIREBASE_STORAGE_BUCKET=bark-buddy-24054.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=568506073260
-FIREBASE_APP_ID=1:568506073260:web:e6e59a3c68471208685f09
+EXPO_PUBLIC_FIREBASE_APIKEY="AIzaSyBOZDeiQZPc8ILElX4yBbBJ4W2qYeQNGds"
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=bark-buddy-24054.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=bark-buddy-24054
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=bark-buddy-24054.appspot.com
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=568506073260
+EXPO_PUBLIC_FIREBASE_APP_ID=1:568506073260:web:e6e59a3c68471208685f09
+EXPO_PUBLIC_FIREBASE_DATABASE_URL=https://bark-buddy-24054-default-rtdb.europe-west1.firebasedatabase.app
