--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@firebase/firestore": "^4.6.1",
     "@gluestack-style/react": "^1.0.56",
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.25",
@@ -21,10 +22,9 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
     "expo": "50",
     "expo-font": "~11.10.3",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
@@ -37,7 +37,6 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
   },
