--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/styled-components": "^5.1.34",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
