add some styles

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "date-fns": "^3.6.0",
     "expo": "50",
     "expo-font": "~11.10.3",
+    "expo-image-manipulator": "^12.0.5",
+    "expo-image-picker": "^15.0.4",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
