--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "barkbuddy",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "type": "commonjs",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,37 +19,39 @@
     "@gluestack-style/react": "^1.0.56",
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.25",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "date-fns": "^3.6.0",
-    "expo": "50",
-    "expo-font": "~11.10.3",
-    "expo-image-manipulator": "^12.0.5",
-    "expo-image-picker": "^15.0.4",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.6",
+    "expo-font": " ~12.0.5",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.4",
+    "expo-linking": "~6.3.1",
+    "expo-router": "^3.5.14",
+    "expo-splash-screen": "^0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "firebase": "^10.11.1",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "uri-js": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/styled-components": "^5.1.34",
-    "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
