--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.6",
-    "expo-font": " ~12.0.5",
+    "expo": "~51.0.9",
+    "expo-font": "~12.0.6",
     "expo-image-manipulator": "~12.0.5",
-    "expo-image-picker": "~15.0.4",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "^3.5.14",
     "expo-splash-screen": "^0.27.4",
